fix: Ai 추천 문구 위한 수정
feat:
- fix: Ai 추천 문구 위한 수정